--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -14,7 +14,7 @@
 	font-size: 25px;
 	padding-bottom: 15px;
 	border-bottom: 2px solid red;
-	box-shadow: 0 12px 8px -8px darkgray;
+	box-shadow: 0 12px 8px -8px rgb(33,32,32);
 }
 .logo_container{
 	
@@ -54,7 +54,7 @@
 	font-size: 25px;
 	padding-bottom: 15px;
 	border-bottom: 2px solid red;
-	box-shadow: 0 12px 8px -8px darkgray;
+	box-shadow: 0 12px 8px -8px rgb(33,32,32);
 }
 .logo_container{
 	
@@ -96,7 +96,7 @@
 	font-size: 20px;
 	padding-bottom: 15px;
 	border-bottom: 2px solid red;
-	box-shadow: 0 12px 8px -8px darkgray;
+	box-shadow: 0 12px 8px -8px rgb(33,32,32);
 }
 .logo_container{
 	
@@ -140,7 +140,7 @@ font-family: Roboto;
 font-size: 20px;
 padding-bottom: 15px;
 border-bottom: 2px solid red;
-box-shadow: 0 12px 8px -8px darkgray;
+box-shadow: 0 12px 8px -8px rgb(33,32,32);
 }
 .logo_container{
 	
@@ -188,7 +188,7 @@ box-shadow: 0 12px 8px -8px darkgray;
 	font-size: 18px;
 	padding-bottom: 15px;
 	border-bottom: 2px solid red;
-	box-shadow: 0 12px 8px -8px darkgray;
+	box-shadow: 0 12px 8px -8px rgb(33,32,32);
 }
 .logo_container{
 	margin-left: -180px;
