Mobile is in prog

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -12,10 +12,8 @@
 	
 	font-family: Roboto;
 	background-color: dimgrey;
-	min-height: 70px;
+	height: 60px;;
 
 }
-.copyright{
-	margin-top: 20px;
-}
+
 
