--- a/src/components/Aboutyou.css
+++ b/src/components/Aboutyou.css
@@ -8,115 +8,256 @@
   src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxK.woff2) format('woff2');
   
 }
-.aboutyou_container{
-	padding-top: 90px;
-	background-color: white;
-	margin: auto;
-	width: 80%;
-	height: 105vh;
+@media (min-width: 700px){
+	.aboutyou_container{
+		padding-top: 90px;
+		background-color: white;
+		margin: auto;
+		width: 80%;
+		height: 105vh;
+
+	}
+	.form_box{
+		padding: 30px;
+		min-width: 75%;
+		margin: auto;
+		border: 1px solid grey;
+		border-radius: 5px;
+		box-shadow: 0 12px 8px -8px darkgray;
+		height: 90vh;
+	}
+	.form-head-text{
+		margin-bottom: 40px;
+	}
+
+	.about_you_sub{
+		margin-top: 20px;
+		margin-bottom: 30px;
+		font-style: italic;
+	}
+
+	.form_num{
+		font-size: 30px;
+		font-weight: bold;
+		color: red;
+	}
+	.slider_cont{
+		margin-top: 10px;
+		margin-bottom: 20px;
+		max-width: 75%;
+
+	}
+	.slide.MuiSlider-colorPrimary{
+
+		color: red;
+	}
+
+	.age_sect{
+		margin-top: 20px;
+	}
+	.inp_des{
+		font-weight: bold;
+	}
+	.age_in{
+		border-bottom: 2px solid red;
+		border-radius: 1px;
+		border-left: none;
+		border-top: none;
+		border-right: none;
+		width: 80px;
+		margin-left: -80px;
+		opacity: 0.5;
+		cursor: pointer;
+	}
+
+	.social_in_modal{
+		margin-top: 20px;
+	}
+	.social_md_desc{
+		text-align: left;
+	}
+
+	.social-radio{
+		margin: auto;
+		margin-top: 20px;
+		width: 90px;
+	}
+	.last_social{
+		margin-left: -60px;
+	}
+
+	.fin_btn {
+		margin-top: 15px;
+		margin-bottom: 20px;
+		box-shadow: 3px 4px 0px 0px #8a2a21;
+		background:linear-gradient(to bottom, #c62d1f 5%, rgb(224,16,16) 100%);
+		border-radius: 2px;
+		background-color:rgb(224,16,16);
+		border:1px solid #d02718;
+		display:inline-block;
+		cursor:pointer;
+		color:#ffffff;
+
+		font-size:25px;
+		padding:6px 50px;
+		text-decoration:none;
+		text-shadow:2px 2px 3px #810e05;
+	}
+	.fin_btn:hover {
+		background:linear-gradient(to bottom, #f24437 5%, #c62d1f 100%);
+		background-color:rgb(224,16,16);
+		text-decoration: none;
+		color:white;
+	}
+	.fin_btn:active {
+		position:relative;
+		top:1px;
+	}
+
+	.question{
+		font-size: 18px;
+	}
+}
+
+@media only screen and (max-width: 600px) {
+	
+	.aboutyou_container{
+		-webkit-animation: fadein 1.5s;
+		padding-top: 10px;
+		background-color: white;
+		width: 100%;
+		min-height: 185vh;
+
+	}
+	.form_box{
+		min-width: 100%;
+		margin: auto;
+		border-radius: 5px;
+		
+	}
+	.form-head-text{
+		font-size: 25px;
+		margin-bottom: 10px;
+		font-weight: 600;
+		
+	}
+	.about_you_sub{
+		margin-bottom: 40px;
+	}
+	.question_card{
+		border: 1px solid black;
+		border-radius: 5px;
+		box-shadow: 0 12px 8px -8px darkgray;
+		background-color: white;
+		padding: 5px;
+		margin-left: -22px;
+		width: 115%;
+		margin-bottom: 45px;
+	}
+	.form_circle{
+		border: 1px solid black;
+		border-radius: 30px;
+		width: 40px;
+		height: 40px;
+		position: relative;
+		top: -30px;
+		left: 25px;
+		background-color: white;
+	}
+	.form_num{
+		font-size: 25px;
+		font-weight: bold;
+		color: red;
+		margin-left: -3px;
+	}
+	.question{
+		margin-left: 10px;
+		margin-top: -22px;
+		text-align: left;
+	}
+	.slider_one{
+		margin-top: 5px;
+		margin-bottom: 10px;
+		margin-left: 15px;
+		max-width: 90%;
+
+	}
+	.age_sect{
+		position: relative;
+		left:10px;
+		top:10px;
+		width: 250px;
+		text-align: left;
+	}
+	.modal_3{
+		position: relative;
+		width: 500px;
+		height: 155px;
+		
+	}
+	.one_rad{
+		positon: relative;
+		top: -30px;
+		left: 30px;
+	}
+	.two_rad{
+		positon: relative;
+		top: -20px;
+		left: -135px;
+	}
+	.three_rad{
+		positon: relative;
+		top: -67px;
+		left: 30px;
+	}
+	.four_rad{
+		positon: relative;
+		top: -50px;
+		left: -134px;
+	}
+	.five_rad{
+		positon: relative;
+		top: -100px;
+		left: 30px;
+	}
+	
+	.fin_btn {
+		margin-bottom: 20px;
+		box-shadow: 3px 4px 0px 0px #8a2a21;
+		background:linear-gradient(to bottom, #c62d1f 5%, rgb(224,16,16) 100%);
+		border-radius: 2px;
+		background-color:rgb(224,16,16);
+		border:1px solid #d02718;
+		display:inline-block;
+		cursor:pointer;
+		color:#ffffff;
+
+		font-size:25px;
+		padding:6px 50px;
+		text-decoration:none;
+		text-shadow:2px 2px 3px #810e05;
+	}
+	.fin_btn:hover {
+		background:linear-gradient(to bottom, #f24437 5%, #c62d1f 100%);
+		background-color:rgb(224,16,16);
+		text-decoration: none;
+		color:white;
+	}
+	.fin_btn:active {
+		position:relative;
+		top:1px;
+	}
+	
 	
 }
-.form_box{
-	padding: 30px;
-	min-width: 75%;
-	margin: auto;
-	border: 1px solid grey;
-	border-radius: 5px;
-	box-shadow: 0 12px 8px -8px darkgray;
-	height: 90vh;
-}
-.form-head-text{
-	margin-bottom: 40px;
-}
-.about-you-form{
-	text-align: left;
-}
+@-webkit-keyframes fadein {
+	  from { opacity: 0; }
+	  to   { opacity: 1; }
+	}
 
-.about_you_sub{
-	margin-top: 20px;
-	margin-bottom: 30px;
-	font-style: italic;
-}
+	@keyframes fadein {
+		from { opacity: 0; }
+		to   { opacity: 1; }
+	}
 
-.form_num{
-	font-size: 30px;
-	font-weight: bold;
-	color: red;
-}
-.slider_cont{
-	margin-top: 10px;
-	margin-bottom: 20px;
-	max-width: 75%;
-	
-}
-.slide.MuiSlider-colorPrimary{
-	margin-top: 15px;
 
-	color: red;
-}
-
-.age_sect{
-	margin-top: 20px;
-}
-.inp_des{
-	font-weight: bold;
-}
-.age_in{
-	border-bottom: 2px solid red;
-	border-radius: 1px;
-	border-left: none;
-	border-top: none;
-	border-right: none;
-	width: 80px;
-	margin-left: -80px;
-	opacity: 0.5;
-	cursor: pointer;
-}
-
-.social_in_modal{
-	margin-top: 20px;
-}
-.social_md_desc{
-	text-align: left;
-}
-
-.social-radio{
-	margin: auto;
-	margin-top: 20px;
-	width: 90px;
-}
-.last_social{
-	margin-left: -60px;
-}
-
-.fin_btn {
-	margin-top: 15px;
-	margin-bottom: 20px;
-	box-shadow: 3px 4px 0px 0px #8a2a21;
-	background:linear-gradient(to bottom, #c62d1f 5%, rgb(224,16,16) 100%);
-	border-radius: 2px;
-	background-color:rgb(224,16,16);
-	border:1px solid #d02718;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	
-	font-size:25px;
-	padding:6px 50px;
-	text-decoration:none;
-	text-shadow:2px 2px 3px #810e05;
-}
-.fin_btn:hover {
-	background:linear-gradient(to bottom, #f24437 5%, #c62d1f 100%);
-	background-color:rgb(224,16,16);
-	text-decoration: none;
-	color:white;
-}
-.fin_btn:active {
-	position:relative;
-	top:1px;
-}
-
-.question{
-	font-size: 18px;
-}
