--- a/src/components/Aboutyou.css
+++ b/src/components/Aboutyou.css
@@ -8,7 +8,7 @@
   src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxK.woff2) format('woff2');
   
 }
-@media (min-width: 700px){
+/*@media (max-width:2500px) and (min-width:1601px){
 	.aboutyou_container{
 		padding-top: 90px;
 		background-color: white;
@@ -118,10 +118,9 @@
 		font-size: 18px;
 	}
 }
-
-@media only screen and (max-width: 600px) {
-	
+@media (max-width:1600px) and (min-width:1201px){
 	.aboutyou_container{
+		
 		-webkit-animation: fadein 1.5s;
 		padding-top: 10px;
 		background-color: white;
@@ -139,7 +138,9 @@
 		font-size: 25px;
 		margin-bottom: 10px;
 		font-weight: 600;
-		
+		width: 400px;
+		position: relative;
+		left:-30px;
 	}
 	.about_you_sub{
 		margin-bottom: 40px;
@@ -188,6 +189,425 @@
 		top:10px;
 		width: 250px;
 		text-align: left;
+	}
+	.modal_3{
+		position: relative;
+		width: 500px;
+		height: 155px;
+		
+	}
+	.one_rad{
+		positon: relative;
+		top: -30px;
+		left: 30px;
+	}
+	.two_rad{
+		positon: relative;
+		top: -20px;
+		left: -135px;
+	}
+	.three_rad{
+		positon: relative;
+		top: -67px;
+		left: 30px;
+	}
+	.four_rad{
+		positon: relative;
+		top: -50px;
+		left: -134px;
+	}
+	.five_rad{
+		positon: relative;
+		top: -100px;
+		left: 30px;
+	}
+	
+	.fin_btn {
+		margin-bottom: 20px;
+		box-shadow: 3px 4px 0px 0px #8a2a21;
+		background:linear-gradient(to bottom, #c62d1f 5%, rgb(224,16,16) 100%);
+		border-radius: 2px;
+		background-color:rgb(224,16,16);
+		border:1px solid #d02718;
+		display:inline-block;
+		cursor:pointer;
+		color:#ffffff;
+
+		font-size:25px;
+		padding:6px 50px;
+		text-decoration:none;
+		text-shadow:2px 2px 3px #810e05;
+	}
+	.fin_btn:hover {
+		background:linear-gradient(to bottom, #f24437 5%, #c62d1f 100%);
+		background-color:rgb(224,16,16);
+		text-decoration: none;
+		color:white;
+	}
+	.fin_btn:active {
+		position:relative;
+		top:1px;
+	}
+}*/
+@media (max-width:2500px) and (min-width:761px){
+	.aboutyou_container{
+		
+		-webkit-animation: fadein 1.5s;
+		padding-top: 10px;
+		background-color: white;
+		width: 100%;
+		min-height: 185vh;
+
+	}
+	.form_box{
+		min-width: 90%;
+		margin-left: 15px;
+		mergin-right:20px;
+		
+		border-radius: 5px;
+		
+	}
+	.form-head-text{
+		font-size: 25px;
+		margin-left:auto;
+		margin-right:auto;
+		margin-bottom: 10px;
+		font-weight: 600;
+		width: 500px;
+		position: relative;
+		
+	}
+	.about_you_sub{
+		margin-bottom: 40px;
+	}
+	.question_card{
+		border: 1px solid black;
+		border-radius: 5px;
+		box-shadow: 0 12px 8px -8px darkgray;
+		background-color: white;
+		padding: 5px;
+		margin-left: auto;
+		margin-right: auto;
+		width: 570px;
+		margin-bottom: 45px;
+	}
+	.form_circle{
+		border: 1px solid black;
+		border-radius: 30px;
+		width: 40px;
+		height: 40px;
+		position: relative;
+		top: -30px;
+		left: 25px;
+		background-color: white;
+	}
+	.form_num{
+		font-size: 25px;
+		font-weight: bold;
+		color: red;
+		margin-left: -3px;
+	}
+	.question{
+		margin-left: 10px;
+		margin-top: -22px;
+		text-align: left;
+	}
+	.slider_one{
+		margin-top: 5px;
+		margin-bottom: 10px;
+		margin-left: 15px;
+		max-width: 90%;
+
+	}
+	.age_in{
+		width: 100px;
+	}
+	.inp_des{
+		min-width: 200px;
+		margin-right: -90px;
+	}
+	.age_sect{
+		position: relative;
+		left: 0px;
+		top:10px;
+		
+		text-align: left;
+	}
+	.modal_3{
+		position: relative;
+		width: 500px;
+		height: 155px;
+		
+	}
+	.one_rad{
+		positon: absolute;
+		top: 25px;
+		left: 30px;
+		min-width:150px;
+	}
+	.two_rad{
+		positon: absolute;
+		top: 80px;
+		left: -135px;
+		min-width:180px;
+	}
+	.three_rad{
+		positon: absolute;
+		min-width:180px;
+		top: -80px;
+		left: 300px;
+	}
+	.four_rad{
+		positon: absolute;
+		top: -30px;
+		left: 110px;
+		min-width:200px;
+	}
+	.five_rad{
+		positon: absolute;
+		top: -20px;
+		left: 290px;
+		min-width:200px;
+	}
+	
+	.fin_btn {
+		margin-bottom: 20px;
+		box-shadow: 3px 4px 0px 0px #8a2a21;
+		background:linear-gradient(to bottom, #c62d1f 5%, rgb(224,16,16) 100%);
+		border-radius: 2px;
+		background-color:rgb(224,16,16);
+		border:1px solid #d02718;
+		display:inline-block;
+		cursor:pointer;
+		color:#ffffff;
+
+		font-size:25px;
+		padding:6px 50px;
+		text-decoration:none;
+		text-shadow:2px 2px 3px #810e05;
+	}
+	.fin_btn:hover {
+		background:linear-gradient(to bottom, #f24437 5%, #c62d1f 100%);
+		background-color:rgb(224,16,16);
+		text-decoration: none;
+		color:white;
+	}
+	.fin_btn:active {
+		position:relative;
+		top:1px;
+	}
+}
+@media (max-width:760px) and (min-width:630px){
+	.aboutyou_container{
+		
+		-webkit-animation: fadein 1.5s;
+		padding-top: 10px;
+		background-color: white;
+		width: 100%;
+		min-height: 185vh;
+
+	}
+	.form_box{
+		min-width: 90%;
+		margin-left: 15px;
+		mergin-right:20px;
+		
+		border-radius: 5px;
+		
+	}
+	.form-head-text{
+		font-size: 25px;
+		margin-left:auto;
+		margin-right:auto;
+		margin-bottom: 10px;
+		font-weight: 600;
+		width: 500px;
+		position: relative;
+		
+	}
+	.about_you_sub{
+		margin-bottom: 40px;
+	}
+	.question_card{
+		border: 1px solid black;
+		border-radius: 5px;
+		box-shadow: 0 12px 8px -8px darkgray;
+		background-color: white;
+		padding: 5px;
+		margin-left: auto;
+		margin-right: auto;
+		width: 570px;
+		margin-bottom: 45px;
+	}
+	.form_circle{
+		border: 1px solid black;
+		border-radius: 30px;
+		width: 40px;
+		height: 40px;
+		position: relative;
+		top: -30px;
+		left: 25px;
+		background-color: white;
+	}
+	.form_num{
+		font-size: 25px;
+		font-weight: bold;
+		color: red;
+		margin-left: -3px;
+	}
+	.question{
+		margin-left: 10px;
+		margin-top: -22px;
+		text-align: left;
+	}
+	.slider_one{
+		margin-top: 5px;
+		margin-bottom: 10px;
+		margin-left: 15px;
+		max-width: 90%;
+
+	}
+	.age_sect{
+		position: relative;
+		left:10px;
+		top:10px;
+		width: 250px;
+		text-align: left;
+	}
+	.modal_3{
+		position: relative;
+		width: 500px;
+		height: 155px;
+		
+	}
+	.one_rad{
+		positon: relative;
+		top: -30px;
+		left: 30px;
+	}
+	.two_rad{
+		positon: relative;
+		top: -20px;
+		left: -135px;
+	}
+	.three_rad{
+		positon: relative;
+		top: -67px;
+		left: 30px;
+	}
+	.four_rad{
+		positon: relative;
+		top: -50px;
+		left: -134px;
+	}
+	.five_rad{
+		positon: relative;
+		top: -100px;
+		left: 30px;
+	}
+	
+	.fin_btn {
+		margin-bottom: 20px;
+		box-shadow: 3px 4px 0px 0px #8a2a21;
+		background:linear-gradient(to bottom, #c62d1f 5%, rgb(224,16,16) 100%);
+		border-radius: 2px;
+		background-color:rgb(224,16,16);
+		border:1px solid #d02718;
+		display:inline-block;
+		cursor:pointer;
+		color:#ffffff;
+
+		font-size:25px;
+		padding:6px 50px;
+		text-decoration:none;
+		text-shadow:2px 2px 3px #810e05;
+	}
+	.fin_btn:hover {
+		background:linear-gradient(to bottom, #f24437 5%, #c62d1f 100%);
+		background-color:rgb(224,16,16);
+		text-decoration: none;
+		color:white;
+	}
+	.fin_btn:active {
+		position:relative;
+		top:1px;
+	}
+}
+@media (max-width:629px) and (min-width:300px) {
+	
+	.aboutyou_container{
+		
+		-webkit-animation: fadein 1.5s;
+		padding-top: 10px;
+		background-color: white;
+		width: 100%;
+		min-height: 185vh;
+
+	}
+	.form_box{
+		min-width: 100%;
+		margin: auto;
+		border-radius: 5px;
+		
+	}
+	.form-head-text{
+		font-size: 25px;
+		margin-bottom: 10px;
+		font-weight: 600;
+		width: 400px;
+		position: relative;
+		left:-30px;
+	}
+	.about_you_sub{
+		margin-bottom: 40px;
+	}
+	.question_card{
+		border: 1px solid black;
+		border-radius: 5px;
+		box-shadow: 0 12px 8px -8px darkgray;
+		background-color: white;
+		padding: 5px;
+		margin-left: -22px;
+		width: 360px;
+		margin-bottom: 45px;
+	}
+	.form_circle{
+		border: 1px solid black;
+		border-radius: 30px;
+		width: 40px;
+		height: 40px;
+		position: relative;
+		top: -30px;
+		left: 25px;
+		background-color: white;
+	}
+	.form_num{
+		font-size: 25px;
+		font-weight: bold;
+		color: red;
+		margin-left: -3px;
+	}
+	.question{
+		margin-left: 10px;
+		margin-top: -22px;
+		text-align: left;
+	}
+	.slider_one{
+		margin-top: 5px;
+		margin-bottom: 10px;
+		margin-left: 15px;
+		max-width: 90%;
+
+	}
+	.age_sect{
+		position: relative;
+		left:10px;
+		top:10px;
+		width: 250px;
+		text-align: left;
+	}
+	.age_in{
+		width:100px
 	}
 	.modal_3{
 		position: relative;
