--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -9,224 +9,208 @@
   
 }
 
-
-.navbar{
-	margin-top: 10px;
-	font-family: Roboto;
-	font-size: 25px;
-	padding-bottom: 15px;
-	border-bottom: 2px solid red;
-	box-shadow: 0 12px 8px -8px rgb(33,32,32);
-}
-.logo_container{
-	
-}
-
-.navsteps_container{
-	padding-left: 50px;
-}
-.first_navstep{
-	margin-right: 20px;
-}
-.navline{
-	margin-left: -80px;
-}
-.navstep{
-	
-	min-width:100px;
-	margin-left: -150px;
-}
-.navsteps_container{
-	padding-top: 50px;
-}
-.last_navstep{
-	margin-left: -120px;
-}
-.step_active{
-	
-	color: red;
-	font-size: 35px;
-	margin-top: -9px;
-}
-
-@media (max-width: 2000px){
+@media (max-width:2500px) and (min-width:1201px){
 	.navbar{
-	margin-top: 10px;
-	font-family: Roboto;
-	font-size: 25px;
-	padding-bottom: 15px;
-	border-bottom: 2px solid red;
-	box-shadow: 0 12px 8px -8px rgb(33,32,32);
-}
-.logo_container{
-	
-}
-
-.navsteps_container{
-	padding-left: 50px;
-}
-.first_navstep{
-	margin-right: 80px;
-}
-.navline{
-	margin-left: 0px;
-}
-.navstep{
-	
-	min-width:100px;
-	margin-left: 0px;
-}
-.navsteps_container{
-	padding-top: 50px;
-}
-.last_navstep{
-	margin-left: 0px;
-}
-.step_active{
-	
-	color: red;
-	font-size: 35px;
-	margin-top: -9px;
-}
-	
-}
-
-@media (max-width: 1340px){
-	.navbar{
-	margin-top: 10px;
-	font-family: Roboto;
-	font-size: 20px;
-	padding-bottom: 15px;
-	border-bottom: 2px solid red;
-	box-shadow: 0 12px 8px -8px rgb(33,32,32);
-}
-.logo_container{
-	
-}
-
-.navsteps_container{
-	padding-left: 50px;
-}
-.first_navstep{
-	margin-right: 60px;
-}
-.navline{
-	margin-right: 15px;
-	margin-left: -10px;
-}
-.navstep{
-	
-	min-width:100px;
-	margin-left: 0px;
-}
-.navsteps_container{
-	padding-top: 50px;
-}
-.last_navstep{
-	margin-left: -15px;
-	margin-right: -20px;
-	min-width: 220px;
-}
-.step_active{
-	
-	color: red;
-	font-size: 25px;
-	margin-top: -3px;
-}
-	
-}
-@media screen and (max-width: 991px) {
-.navbar{
-margin-top: 10px;
-font-family: Roboto;
-font-size: 20px;
-padding-bottom: 15px;
-border-bottom: 2px solid red;
-box-shadow: 0 12px 8px -8px rgb(33,32,32);
-}
-.logo_container{
-	
-}
-
-.navsteps_container{
-	padding-left: 50px;
-}
-.first_navstep{
-	margin-right: 90px;
-}
-.navline{
-	max-width: 50px;
-	margin-right: 5px;
-	margin-left: -35px;
-}
-.navstep{
-	
-	min-width:200px;
-	margin-left: -60px;
-	margin-right: 8px;
-}
-.navsteps_container{
-	padding-top: 50px;
-}
-.last_navstep{
-	margin-left: -35px;
-	margin-right: -20px;
-	min-width: 165px;
-}
-.step_active{
-	
-	color: red;
-	font-size: 25px;
-	margin-top: -3px;
-}
-
-}
-
-@media only screen and (max-width: 600px) {
-/* start of medium tablet styles */
-	.navbar{
-	margin-top: 10px;
-	font-family: Roboto;
-	font-size: 18px;
-	padding-bottom: 15px;
-	border-bottom: 2px solid red;
-	box-shadow: 0 12px 8px -8px rgb(33,32,32);
-	}
-	.logo_container{
-		position: relative;
-		left:-120px;
-	
+		margin-top: 10px;
+		font-family: Roboto;
+		font-size: 25px;
+		padding-bottom: 15px;
+		border-bottom: 2px solid red;
+		box-shadow: 0 12px 8px -8px rgb(33,32,32);
 	}
 
 	.navsteps_container{
-		position: relative;
-		margin-top: -165px;
-		padding-left: 150px;
+		padding-left: 50px;
 	}
 	.first_navstep{
-		margin-right: 0px;
-		margin-left: -70px;
+		margin-right: 80px;
 	}
 	.navline{
-		display: none;
+		margin-left: 0px;
 	}
 	.navstep{
 
-		float: right;
+		min-width:100px;
+		margin-left: 0px;
 	}
 	.navsteps_container{
 		padding-top: 50px;
 	}
 	.last_navstep{
-		margin-left: -43px;
-		margin-right: 0px;
-		min-width: 165px;
+		margin-left: 20px;
+		min-width:200px;
+	}
+	.step_active{
+
+		color: red;
+		
+	
+	}
+	
+}
+
+@media (max-width:1200px) and (min-width:901px){
+	.navbar{
+	margin-top: 10px;
+	font-family: Roboto;
+	font-size: 20px;
+	padding-bottom: 15px;
+	
+	box-shadow: 0 12px 8px -8px rgb(33,32,32);
+	}
+	.logo_container{
+
+	}
+
+	.navsteps_container{
+		position: absolute;
+		left:100px;
+	}
+	.first_navstep{
+		margin-right: 50px;
+	}
+	.navline{
+		position: relative;
+		left:5px;
+	}
+	.navstep{
+
+		position: relative;
+		left:25px;
+	}
+	.navsteps_container{
+		padding-top: 50px;
+	}
+	.last_navstep{
+		position: relative;
+		min-width:170px;
+		left:30px;
+	}
+	.step_active{
+		position: relative;
+		color: red;
+		
+		margin-top: -3px;
+
+	}
+	
+}
+
+@media (max-width:900px) and (min-width:630px){
+	.navbar{
+		margin-top: 5px;
+		font-family: Roboto;
+		font-size: 20px;
+		padding-bottom: 15px;
+		box-shadow: 0 12px 8px -8px rgb(33,32,32);
+	}
+	.logo_container{
+		width: 30px;
+	}
+
+	.navsteps_container{
+		position: relative;
+		top:40px;
+		left:25px;
+
+	}
+	.navline{
+		max-width: 50px;
+		margin-right: 5px;
+		display: none;
+	}
+	
+	.navstep{
+		min-width:150px;
+		margin-left: 20px;
+		margin-right: 10px;
+		
+	}
+	.first_navstep{
+		position: relative;
+		margin-left: 3%;
+		margin-top: -30px;
+	}
+	.sec_nav{
+		position: relative;
+		margin-left: 2%;
+		top: -10px;
+	}
+	.thr_nav{
+		position: relative;
+		margin-left: -6%;
+		top: 10px;
+	}
+	.last_navstep{
+		position: relative;
+		margin-left: -5%;
+		margin-top: 25px;
+		min-width:180px;
 	}
 	.step_active{
 
 		color: red;
 		font-size: 25px;
-		margin-top: -3px;
+		
+	}
+
+}
+
+@media (max-width:629px){
+/* start of medium tablet styles */
+	.navbar{
+		margin-top: 5px;
+		font-family: Roboto;
+		font-size: 20px;
+		padding-bottom: 20px;
+		box-shadow: 0 12px 8px -8px rgb(33,32,32);
+	}
+	.logo_container{
+		width: 30px;
+	}
+
+	.navsteps_container{
+		position: absolute;
+		left: 35px;
+		padding-left: 10px;
+		width: 600px;
+	}
+	.navline{
+		max-width: 50px;
+		margin-right: 5px;
+		display: none;
+	}
+	
+	.navstep{
+		min-width:150px;
+		margin-left: 20px;
+		margin-right: 10px;
+		
+	}
+	.first_navstep{
+		position: absolute;
+		left: 88px;
+	}
+	.sec_nav{
+		position: absolute;
+		left: 52px;
+		top: 30px;
+	}
+	.thr_nav{
+		position: absolute;
+		left:52px;
+		top:63px;
+		
+	}
+	.last_navstep{
+		position: absolute;
+		top: 97px;
+		left: 82px;
+		min-width: 170px;
+	}
+	.step_active{
+		color: red;
+		font-weight: 500;
 	}
 }
 
